--- a/app.html
+++ b/app.html
@@ -1,14 +1,16 @@
 <!Doctype html>
+<!-- this is how to comment -->
 <html>
     <head>
         <title>this txt</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+
     </head>
     <body>
-        <div class="title">My App</div>
+        <div class="title">My Favorite App</div>
         <div class="app">
-		        <div class="screenshot">image</div>
-		        <div class="description">In ac ipsum quis turpis adipiscing 
+		        <div class="image"><img src="images/app.png" alt="screenshot"/></div>
+                <div class="description">In ac ipsum quis turpis adipiscing 
                     commodo. <em>Mauris fermentum quam</em> in risus eleifend 
                     fringilla. Aliquam placerat, ipsum sit amet cursus rhoncus,
                     augue mi tincidunt erat, et consequat velit massa a velit. 
@@ -31,7 +33,9 @@
                     ornare sed suscipit at, tempus elementum purus. 
                     Suspendisse sodales hendrerit pharetra. Integer odio 
                     risus, convallis eu egestas ac, venenatis nec leo.
-		        </div>                
+		        </div>
         </div>
+        <script src="add-content.js"></script>
+        <img src="images/img.jpeg" />
     </body>
 </html>
